# uvedit

./: LICENSE  README.md  pyproject.toml  uvedit
.github/workflows/: test.yml
src/uvedit/: __main__.py  cli.py  configuration.py  git.py  save_state.py
test/: conftest.py  test_e2e.py
