[project]
name = "uvedit"
version = "1.0.1"
dependencies = [
  "tomlkit",
]
authors = [{ name = "Martijn de Milliano" }, { name = "Max Suurland" }]
description = "Tool to switch `uv` dependencies between local editable checkouts and remote git sources."
readme = "README.md"
license = "MIT"
keywords = ["uv", "uv-sources"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
]
requires-python = ">=3.11"
license-files = ["LICENSE"]

[project.optional-dependencies]
extra = [
  "argcomplete",
]

[project.scripts]
uvedit = "uvedit.cli:main"

[project.urls]
# Homepage = ""
# Documentation = ""
Repository = "https://github.com/mjdemilliano/uvedit"
Issues = "https://github.com/mjdemilliano/uvedit/issues"
# Changelog = "https://github.com/mjdemilliano/uvedit/blob/master/CHANGELOG.md"

[build-system]
requires = ["uv_build >= 0.11.7, <0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "mypy",
  "argcomplete",
  "ruff",
  "pip-audit",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.coverage.run]
branch = true
patch = ["subprocess"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]